# protomon

./: .gitignore  Cargo.toml  LICENSE-MIT  PERF_NOTES.md
benches/: key.rs  leb128.rs
proptest-regressions/: leb128.txt
protomon/: Cargo.toml
protomon-build/: Cargo.toml
protomon-build/proto/protomon/: extensions.proto
protomon-build/src/: config.rs  context.rs  descriptor.rs  error.rs  lib.rs  protoc.rs
protomon-build/src/codegen/: comments.rs  enumeration.rs  field.rs  message.rs  mod.rs  module.rs  oneof.rs  recursion.rs  types.rs
protomon-build/src/descriptor/: decode.rs  mod.rs
protomon-build/tests/: integration_test.rs
protomon-build/tests/proto/: test.proto  test_comments.proto  test_extensions.proto  test_map.proto  test_oneof.proto  test_recursive.proto  test_unknown.proto
protomon-build/tests/snapshots/: integration_test__comment_generation.snap
protomon-conformance/: .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  build.rs  generate_binaries.cpp
protomon-conformance/protos/: edge_cases.proto  nested.proto  repeated.proto  scalars.proto
protomon-conformance/src/: lib.rs  tests.rs
protomon-conformance/testdata/edge_cases/: all_defaults.textproto  empty.textproto  field_numbers_all.textproto  field_numbers_max.textproto  field_numbers_min.textproto  optional_all_absent.textproto  optional_all_present.textproto  optional_int_only.textproto  tests.txt  wire_types_all.textproto
protomon-conformance/testdata/nested/: deep_all_levels.textproto  nested_empty.textproto  nested_simple.textproto  nested_with_repeated.textproto  node_deep_tree.textproto  node_leaf.textproto  node_with_children.textproto  optional_absent.textproto  optional_empty_payload.textproto  optional_present.textproto  tests.txt
protomon-conformance/testdata/repeated/: repeated_all.textproto  repeated_bool_packed.textproto  repeated_bytes_multiple.textproto  repeated_double_packed.textproto  repeated_fixed32_packed.textproto  repeated_fixed64_packed.textproto  repeated_float_packed.textproto  repeated_int32_multiple.textproto  repeated_int32_packed.textproto  repeated_int32_single.textproto  repeated_int64_packed.textproto  repeated_sfixed32_packed.textproto  repeated_sfixed64_packed.textproto  repeated_sint32_packed.textproto  repeated_sint64_packed.textproto  repeated_string_empty.textproto  repeated_string_multiple.textproto  repeated_string_single.textproto  repeated_uint32_packed.textproto  repeated_uint64_packed.textproto  tests.txt
protomon-conformance/testdata/scalars/: bytes_binary.textproto  bytes_empty.textproto  double_max.textproto  double_min_positive.textproto  double_minus_one.textproto  double_pi.textproto  float_max.textproto  float_min_positive.textproto  float_pi.textproto  int32_zero.textproto  int64_large.textproto  scalars_all.textproto  scalars_zeros.textproto  string_escaped.textproto  string_hello.textproto  string_unicode.textproto  tests.txt  uint32_128.textproto  uint32_max.textproto  uint64_large.textproto  uint64_max.textproto
protomon-derive/: Cargo.toml
protomon-derive/src/: lib.rs  support.rs  tests.rs
protomon-derive/src/snapshots/: protomon_derive__tests__message_with_map.snap  protomon_derive__tests__message_with_oneof.snap  protomon_derive__tests__message_with_optional.snap  protomon_derive__tests__message_with_repeated.snap  protomon_derive__tests__message_with_required_oneof.snap  protomon_derive__tests__message_with_unknown_fields.snap  protomon_derive__tests__oneof_enum.snap  protomon_derive__tests__simple_message.snap
protomon-fuzz/: Cargo.toml
protomon-fuzz/examples/: protoc_test.rs
protomon-fuzz/harness/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
protomon-fuzz/harness/cpp/: BUILD.bazel  bazel-bin  bazel-cpp  bazel-out  bazel-testlogs  main.cpp  main_compiled.cpp
protomon-fuzz/harness/go/: BUILD.bazel  go.mod  main.go  main_dynamic.go
protomon-fuzz/harness/proto/: BUILD.bazel  test.proto
protomon-fuzz/src/: lib.rs  value.rs
protomon/benches/: codec.rs  key.rs  leb128.rs  packed.rs
protomon/examples/: derive_optional.rs  derive_repeated.rs  derive_test.rs  derive_vec_repeated.rs  optional.rs  repeated.rs  simple.rs  vec_repeated.rs
protomon/src/: codec.rs  error.rs  leb128.rs  lib.rs  util.rs  wire.rs
protomon/src/codec/: default_check.rs  delimited.rs  map.rs  message.rs  oneof.rs  optional.rs  packed.rs  repeated.rs  scalar.rs  wrappers.rs
protomon/tests/: default_check.rs  map_derive.rs  oneof_derive.rs  unknown_fields.rs
src/: asserts.rs  buffer.rs  error.rs  leb128.rs  lib.rs  wire.rs
