[package]
name = "protomon-fuzz"
version = "0.1.0"
edition = "2021"
description = "Fuzzing framework for protomon - generates random protobuf schemas"
license = "MIT OR Apache-2.0"

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
base64 = "0.22"
tempfile = "3"

[dev-dependencies]
libfuzzer-sys = "0.4"
insta = "1"

[[bin]]
name = "harness_test"
path = "src/bin/harness_test.rs"

[features]
fuzzing = []
