[package]
name = "protomon"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
smallvec = { version = "1", features = ["const_generics", "union"], optional = true }
protomon-derive = { path = "../protomon-derive", optional = true }

[dev-dependencies]
criterion = "0.6"
prost = "0.14"
proptest = { version = "1", features = ["attr-macro"] }

[features]
default = ["smallvec", "derive"]
derive = ["dep:protomon-derive"]

[[bench]]
name = "leb128"
harness = false

[[bench]]
name = "key"
harness = false
